revert: Fixed Users table scroll not visible

--- a/client/src/components/Settings/Settings.module.scss
+++ b/client/src/components/Settings/Settings.module.scss
@@ -42,6 +42,7 @@
     position: relative;
     flex: 1;
     height: 100%;
+    width: calc(100% - 180px);
   }
 
   .sidebar {
